# msteamssamples

agent_basic/: README.md  app.py  main.py  pyproject.toml  requirements.txt
agent_basic/bots/: teams_conversation_bot.py
agent_basic/config/: __init__.py  config.py
agent_basic/mcp/: mcp_client.py  mcp_client_wrapper.py
agent_basic/mcp/client/: __init__.py  stdio.py
agent_basic/mcp/gmail-mcp-server/src/gmail/: server.py  server_backup.py
agent_basic/mcp/math-paint-mcp-server/: mcp_server.py
agent_basic/reference/: mcp_client.py
sample/: .gitignore  config.py
sample/appManifest/: manifest.json
sample/bots/: teams_conversation_bot.py
